# babirusa

./: .gitignore  Doxyfile  Makefile.am  README  configure.ac
src/lib/: Makefile.am  backup.c  backup.h  backup_test.c  berkeley_registry.c  berkeley_registry.h  files.c  files.h  info.c  info.h  object.h  registry.c  registry.h
src/lib/berkeley_registry/: Makefile.am  berkeley_registry.c  berkeley_registry.h  berkeley_registry_model.h  berkeley_registry_test.c
src/lib/common/: Makefile.am  files.c  info.c  info.h  info_test.c  registry.h  serialize.c  serialize.h  serialize_test.c
src/lib/dbreg/: Makefile.am  dbreg.c  dbreg_model.h  dbreg_test.c
